--- a/config/deploy/local/controller-config.env.template
+++ b/config/deploy/local/controller-config.env.template
@@ -1,5 +1,6 @@
 HCG_LE_EMAIL=kuadrant-dev@redhat.com
 GLBC_TLS_PROVIDED=true
+GLBC_LOGICAL_CLUSTER_TARGET=root:rh-sso-15897946:glbc
 GLBC_TLS_PROVIDER=le-staging
 GLBC_ENABLE_CUSTOM_HOSTS=false
 GLBC_DOMAIN=dev.hcpapps.net
