--- a/.github/workflows/kcp-glbc-image.yaml
+++ b/.github/workflows/kcp-glbc-image.yaml
@@ -59,9 +59,9 @@ jobs:
         run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
 
   deploy:
-    if: "github.repository_owner == 'kuadrant' && github.ref_name == 'main'"
+    if: "github.repository_owner == 'kuadrant' && github.ref_name == 'release-0.1'"
     name: Deploy KCP GLBC Image
-    environment: unstable
+    environment: stable
     runs-on: ubuntu-20.04
     needs: build
     steps:
