--- a/.github/workflows/kcp-glbc-image.yaml
+++ b/.github/workflows/kcp-glbc-image.yaml
@@ -64,8 +64,6 @@ jobs:
     environment: unstable
     runs-on: ubuntu-20.04
     needs: build
-    env:
-      CONTROLLER_IMAGE: "${{ env.IMG_REGISTRY_HOST }}/${{ env.IMG_REGISTRY_ORG }}/kcp-glbc:${{ needs.build.outputs.sha_short }}"
     steps:
       - uses: actions/checkout@v2
       - name: Set up kubectl and kustomize
@@ -79,5 +77,4 @@ jobs:
         id: deploy-image
         run: |-
           export PATH="${PATH}:$(pwd)/bin/"
-          echo "Controller image: ${{ env.CONTROLLER_IMAGE }}"
-          kubectl --server=https://${{ secrets.CICD_KUBE_HOST }} --token=${{ secrets.CICD_KUBE_TOKEN }} -n ${{ secrets.CICD_KUBE_NS }} patch deployment kcp-glbc-controller-manager --patch '{"spec": {"template": {"spec": {"containers": [{"name": "manager","image": "${{ env.CONTROLLER_IMAGE }}" }]}}}}'
+          kubectl --server=https://${{ secrets.CICD_KUBE_HOST }} --token=${{ secrets.CICD_KUBE_TOKEN }} -n ${{ secrets.CICD_KUBE_NS }} patch deployment kcp-glbc-controller-manager --patch '{"spec": {"template": {"spec": {"containers": [{"name": "manager","image": "${{ env.IMG_REGISTRY_HOST }}/${{ env.IMG_REGISTRY_ORG }}/kcp-glbc:${{ needs.build.outputs.sha_short }}" }]}}}}'
