--- a/samples/echo-service/echo.yaml
+++ b/samples/echo-service/echo.yaml
@@ -39,7 +39,7 @@ metadata:
   name: echo
 spec:
   rules:
-    - host: whatever.com
+    - host: craigbrookes.com
       http: 
         paths:
           - path: /
