--- a/config/webhooks/transform-service.yaml
+++ b/config/webhooks/transform-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kcp-glbc-transform
+  name: service-glbc-transform
 spec:
   selector:
     app.kubernetes.io/name: kcp-glbc
