Run glbc in kcp and pass the url and ip to the plugin through the plugin config

--- a/argocd-glbc-plugin/config/argocd-install/plugin-config.yaml.template
+++ b/argocd-glbc-plugin/config/argocd-install/plugin-config.yaml.template
@@ -21,7 +21,7 @@ data:
           - argocd-glbc-plugin
           - generate
           - --url
-          - http://cduj0ituqhgagi1qc3og.dev.hcpapps.net/transform
+          - http://${GLBC_HOST}/transform
           - --resolve
-          - 172.18.0.3:80
+          - ${GLBC_IP}:80
       lockRepo: false
