Configure the plugin with a token to access argocd API

--- a/argocd-glbc-plugin/config/argocd-install/plugin-config.yaml.template
+++ b/argocd-glbc-plugin/config/argocd-install/plugin-config.yaml.template
@@ -24,4 +24,6 @@ data:
           - http://${GLBC_HOST}/transform
           - --resolve
           - ${GLBC_IP}:80
+          - --token
+          - ${ARGOCD_TOKEN}
       lockRepo: false
